# awesome-list-view

./: .gitignore  DEV.md  LICENSE  README.md  TODO.org  justfile  pyproject.toml
app/: __main__.py  cli.py
app/app/: cache_management.py  data_loader.py  detail_view.py  layout.py  list_view.py  search_modal.py  tag_filter.py  topic_filter.py
app/funcs/: cache_manager.py  editor_manager.py  exceptions.py  filter_manager.py  json_generator.py  markdown_parser.py  schema.py  settings_loader.py  tag_processor.py  url_manager.py
tests/: conftest.py  test_basic.py  test_cache_management.py  test_editor_manager.py  test_exclude_tags.py  test_filter_manager.py  test_integration.py  test_key_bindings.py  test_markdown_parser.py  test_quit.py  test_settings_loader_config.py  test_source_file_editing_integration.py  test_tag_filter_space_key.py  test_topic_filter.py  test_tui_issues.py  test_url_manager.py
tests/fixtures/: sample_awesome_list.md
